<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/please_choose_assessment_type"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mentalEmotionalBodyCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="88dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/metal_health"
                        app:srcCompat="@drawable/mental_health_icon" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_sign"
                        android:textAlignment="center"
                        android:textColor="@color/blue_700"
                        android:textSize="32sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="88dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/arms"
                        app:srcCompat="@drawable/arms" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="16dp"
                    android:text="@string/mental_emotional_and_body_composition"
                    android:textAlignment="center"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/bodyCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/arms"
                        app:srcCompat="@drawable/arms" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="32dp"
                        android:paddingBottom="16dp"
                        android:text="@string/body_composition"
                        android:textAlignment="center"
                        android:textColor="@color/blue_700"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mentalCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/metal_health"
                        app:srcCompat="@drawable/mental_health_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="32dp"
                        android:paddingBottom="16dp"
                        android:text="@string/mental_and_emotional"
                        android:textAlignment="center"
                        android:textColor="@color/blue_700"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/socialCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="88dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/metal_health"
                    app:srcCompat="@drawable/mental_health_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="16dp"
                    android:text="@string/social_determinants_of_health_assessment"
                    android:textAlignment="center"
                    android:textColor="@color/blue_700"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>

